--- a/src/component/App/App.css
+++ b/src/component/App/App.css
@@ -7,6 +7,19 @@
   background-color: #f5f5f7;
 }
 
+.loader {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.exchange {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .exchange__input {
   border: none;
   border-bottom: 1px solid #000000;
@@ -19,10 +32,18 @@
 .exchange_inner {
   display: flex;
   margin-top: 20px;
-  justify-content: space-between;
 }
 
 .exchange__input:focus {
   outline: none;
   border-bottom: 1px solid #03a9f4;
+}
+
+.exchange__separator {
+  padding: 0 15px;
+}
+
+.exchange__result {
+  display: block;
+  margin-top: 20px;
 }
